--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 					<!-- * * * * * * Top menu * * * * * * -->
 					<div class="top-menu visible-md-inline-block visible-lg-inline-block">
 						<ul>
-							<li><a href="#services">Цены на услуги</a></li>
-							<li><a href="#faq">Ответы на вопросы</a></li>
-							<li><a href="#contacts">Контакты</a></li>
+							<li><a>Цены на услуги</a></li>
+							<li><a>Ответы на вопросы</a></li>
+							<li><a>Контакты</a></li>
 						</ul>
 					</div>
 					<div class="cleaner"></div>
