--- a/index.html
+++ b/index.html
@@ -720,6 +720,19 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<script src="dist/bundle.js?<include '/param.php';?"></script>
+
+	<!--
+	<script>
+		const carousel = new SliderCarousel({
+			main: '.services-elements',
+			wrap: '.col-sm-6',
+			prev: '.arrow-left',
+			next: '.arrow-right',
+			slidesToShow: 3,
+		});
+		carousel.init();
+	</script>
+	-->
 </body>
 
 </html>
